# RTIDViz

./: CMakeLists.txt  README.md  conanfile.txt  rebuildinstructions.txt
include/: cuda_functions.h  data.h
src/: main.cpp
src/compute/: cuda_functions.cu
